@@ -1,5 +1,6 @@
 0.28
  - Add check_sense() to Utils.
+ - Add Wikibase::Datatype::Value::Sense class.
  - Fix doc in Wikibase::Datatype::Value::Property.
 
 0.27 2023-04-22T19:14:08+02:00
